2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/jpeg/jpeg.c: Removed redundant image_ID declaration that
	shadowed an outer variable needlessly (found using Splint).

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/sel2path/fit.c: Initialize spline.linearity before use.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/sel2path/spline.c: Initialize spline.linearity before use.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/script-fu/re/split.c
	* plug-ins/script-fu/re/split.h
	* plug-ins/script-fu/re/main.c
	* plug-ins/script-fu/re/Makefile.am: Created a header file (split.h)
	and added a prototype for split().

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* app/tools/gimpdrawtool.c: Added missing include.

	* app/tools/gimpbycolorselecttool.c: Removed unused variable.

	* app/plug-in/gimpenvirontable.c: Added cast for callback function.

	* plug-ins/script-fu/tinyscheme/scheme.c: Correctly cast pointer to
	an long integer type.

2007-05-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_file.c (do_file_save_as_dialog): set a
	filename based on the image name. Based on a patch from Kevin
	Hurewitz (bug #317916).

	* plug-ins/twain/tw_mac.c: don't use C++ style comments.

2007-05-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/postscript.c: minor code cleanup.

2007-05-29  Sven Neumann  <sven@gimp.org>

	* app/base/base-types.h: removed unused typedef.

2007-05-29  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.c: use GSlice to allocate the transform
	matrix.

2007-05-29  Sven Neumann  <sven@gimp.org>

	* app/vectors/gimpvectors-import.c: don't memdup gslice-allocated
	memory.

2007-05-29  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c (gimp_image_parasite_attach)
	* app/core/gimpitem.c (gimp_item_parasite_attach): allocate the
	temporary GimpParasite copy on the stack.

2007-05-29  Michael Natterer  <mitch@gimp.org>
